--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -3,8 +3,20 @@
 <h1>{{ album.album_title }}</h1>
 <h3>{{ album.artist }}</h3>
 
-<ul>
+{% if error_message %}
+    <p><strong> {{ error_message }}</strong>r</p>
+{% endif%}
+
+<form action="{% url 'music:favourite' album.id %}" method="post">
+    {% csrf_token %}
     {% for song in album.song_set.all %}
-    <li> {{ song.song_title}} - {{ song.file_type }}</li>
+        <input type="radio" id="song{{forloop.counter}}" name="song" value="{{ song.id }}" />
+        <label for="song{{forloop.counter}}">
+            {{ song.song_title }}
+            {% if song.is_favourite %}
+                <img src="https://thumbs.dreamstime.com/b/realistic-golden-star-icon-ranking-mark-vector-isolated-eps-94515595.jpg" width="16" height="16">
+            {% endif%}
+        </label><br>
     {% endfor %}
-</ul>
+    <input type="submit" value="favourite">
+</form>
