--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,22 +1,26 @@
-<img src="{{ album.album_logo }}">
+{% extends 'music/base.html' %}
+{% block body %}
 
-<h1>{{ album.album_title }}</h1>
-<h3>{{ album.artist }}</h3>
+    <img src="{{ album.album_logo }}">
 
-{% if error_message %}
-    <p><strong> {{ error_message }}</strong>r</p>
-{% endif%}
+    <h1>{{ album.album_title }}</h1>
+    <h3>{{ album.artist }}</h3>
 
-<form action="{% url 'music:favourite' album.id %}" method="post">
-    {% csrf_token %}
-    {% for song in album.song_set.all %}
-        <input type="radio" id="song{{forloop.counter}}" name="song" value="{{ song.id }}" />
-        <label for="song{{forloop.counter}}">
-            {{ song.song_title }}
-            {% if song.is_favourite %}
-                <img src="https://thumbs.dreamstime.com/b/realistic-golden-star-icon-ranking-mark-vector-isolated-eps-94515595.jpg" width="16" height="16">
-            {% endif%}
-        </label><br>
-    {% endfor %}
-    <input type="submit" value="favourite">
-</form>
+    {% if error_message %}
+        <p><strong> {{ error_message }}</strong>r</p>
+    {% endif%}
+
+    <form action="{% url 'music:favourite' album.id %}" method="post">
+        {% csrf_token %}
+        {% for song in album.song_set.all %}
+            <input type="radio" id="song{{forloop.counter}}" name="song" value="{{ song.id }}" />
+            <label for="song{{forloop.counter}}">
+                {{ song.song_title }}
+                {% if song.is_favourite %}
+                    <img src="https://thumbs.dreamstime.com/b/realistic-golden-star-icon-ranking-mark-vector-isolated-eps-94515595.jpg" width="16" height="16">
+                {% endif%}
+            </label><br>
+        {% endfor %}
+        <input type="submit" value="favourite">
+    </form>
+{% endblock %}
