--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,72 +1,13 @@
-<!-- Loads static files -->
-{% load staticfiles %}
-
-
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="{% static 'music/style.css' %}" type="text/css" />
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'music:index'%}"> MusicApp </a>
-      </div>
-    <div class="navbar-collapse  order-1 order-md-0 dual-collapse2">
-
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-item nav-link" href="{% url 'music:index'%}">
-                    <span class="fas fa-compact-disc"  aria-hidden="true"></span>&nbsp; Albums
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-item nav-link" href="{% url 'music:index'%}">
-                    <span class="fab fa-itunes-note"  aria-hidden="true"></span>&nbsp; Songs
-                </a>
-            </li>
-            <li class="nav-item">
-                <form class="form-inline my-0">
-                    <input type="text" class="form-control mx-1" name="q" value="" style="max-width:200px;">
-                    <button type="submit" class="btn btn-default">Search</button>
-                </form>
-            </li>
+{% extends 'music/base.html' %}
+{% block body %}
+    {% if all_albums %}
+        <h3>All Albums: </h3>
+        <ul>
+            {% for album in all_albums %}
+            <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }} </a></li>
+            {% endfor %}
         </ul>
-    </div>
-
-    <div class="navbar-collapse collapse order-3 dual-collapse2 justify-content-end">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <span><i class="fas fa-plus"></i> Add Album</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                <span><i class="fas fa-sign-out-alt"></i>Logout</span>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="justify-content-left">
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-    </div>
-
-</nav>
-
-{% if all_albums %}
-    <h3>All Albums: </h3>
-    <ul>
-        {% for album in all_albums %}
-        <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }} </a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <h3> You don't have any albums</h3>
-{% endif %}
+    {% else %}
+        <h3> You don't have any albums</h3>
+    {% endif %}
+{% endblock %}
