--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MusicApp</title>
+    <title>{% block title %}MusicApp{% endblock %}</title>
 </head>
 <body>
     <!-- Loads static files -->
