--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,4 +1,5 @@
 {% extends 'music/base.html' %}
+{% block title %}{{ album.album_title }} - DETAILS{% endblock %}
 {% block body %}
 
     <img src="{{ album.album_logo }}">
