--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}MusicApp{% endblock %}</title>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="80">
     <!-- Loads static files -->
 {% load staticfiles %}
 
@@ -18,11 +18,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="{% static 'music/style.css' %}" type="text/css" />
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="nav">
     <div class="navbar-header">
         <a class="navbar-brand" href="{% url 'music:index'%}"> MusicApp </a>
     </div>
-    <div class="navbar-collapse  order-1 order-md-0 dual-collapse2">
+    <div class="navbar-collapse collapse  order-1 order-md-0 dual-collapse2">
 
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
