--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -3,17 +3,52 @@
 
 {% block body %}
 
-    <img src="{{ album.album_logo }}">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-5">
+                <div class="card text-center">
+                    <img src="{{ album.album_logo }}" class="card-img-top"/>
+                    <div class="card-block">
+                        <h1 class="card-title my-2">{{ album.album_title }}</h1>
+                        <h3 class="m-2">{{ album.artist }}</h3>
+                        <button class="btn btn-info m-2" data-toggle="modal" data-target="#usluga_4">det</button>
+                        <button class="btn btn-info m-2" data-toggle="modal" data-target="#usluga_4">del</button>
+                        <button class="btn btn-info m-2" data-toggle="modal" data-target="#usluga_4">fav</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-7">
+                <table class="table">
+                     <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Audio File</th>
+                            <th>Favorite</th>
+                            <th>Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            {% for song in album.song_set.all %}
+                                <tr>
+                                    <td> {{ song.song_title }}</td>
+                                    <td>Audio file</td>
+                                    <td>Favourite</td>
+                                    <td>
+                                        <form class="form-inline">
+                                        <button class="btn btn-info m-2">det</button>
+                                        <button class="btn btn-danger m-2">del</button>
+                                        <button class="btn btn-warning m-2" >fav</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                </table>
+            </div>
+        </div>
 
-    <h1>{{ album.album_title }}</h1>
-    <h3>{{ album.artist }}</h3>
+    </div>
 
-    {% for song in album.song_set.all %}
-        {{ song.song_title }}
-        {% if song.is_favourite %}
-            <img src="https://thumbs.dreamstime.com/b/realistic-golden-star-icon-ranking-mark-vector-isolated-eps-94515595.jpg" width="16" height="16">
-        {% endif%}
-        <br>
-    {% endfor %}
+
 
 {% endblock %}
