--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -8,18 +8,19 @@
             <div class="col-md-5">
                 <div class="card text-center">
                     <img src="{{ album.album_logo }}" class="card-img-top"/>
-                    <div class="card-block">
-                        <h1 class="card-title my-2">{{ album.album_title }}</h1>
-                        <h3 class="m-2">{{ album.artist }}</h3>
-                        <button class="btn btn-info m-2" data-toggle="modal" data-target="#usluga_4">det</button>
-                        <button class="btn btn-info m-2" data-toggle="modal" data-target="#usluga_4">del</button>
-                        <button class="btn btn-info m-2" data-toggle="modal" data-target="#usluga_4">fav</button>
+                    <div class="card-block px-3">
+                        <div class="card-text ">
+                            <h1 class="card-title ">{{ album.album_title }}</h1>
+                            <h3 class="">{{ album.artist }}</h3>
+                        </div>
+                        <button class="btn btn-default m-2" ><i class="fas fa-trash-alt"></i></button>
+                        <button class="btn btn-warning m-2" ><i class="fas fa-star"></i></button>
                     </div>
                 </div>
             </div>
             <div class="col-md-7">
-                <table class="table">
-                     <thead>
+                <table class="table table-striped table-sm">
+                     <thead class="thead-dark">
                         <tr>
                             <th>Title</th>
                             <th>Audio File</th>
@@ -29,7 +30,7 @@
                         </thead>
                         <tbody>
                             {% for song in album.song_set.all %}
-                                <tr>
+                                <tr >
                                     <td> {{ song.song_title }}</td>
                                     <td>Audio file</td>
                                     <td>Favourite</td>
