--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -2,14 +2,28 @@
 
 {% block body %}
 
-    <div class="container mt-5">
-        <h3>All Albums: </h3>
-        <ul>
+
+
+        <div class="container mt-3 ">
             {% for album in all_albums %}
-                <li><a href="{% url 'music:detail' album.id %}"> {{ album.album_title }} </a></li>
+                <div class="card mx-2 " style="float: left;">
+                    <img src="{{ album.album_logo }}" />
+                    <div class="card-block px-2">
+                        <h1> {{ album.album_title }} </h1>
+                        <h2>{{ album.artist }}</h2>
+                        <button class="btn btn-info m-2" ><a href="{% url 'music:detail' album.id %}" style="text-decoration: none;color: white;">View details</a></button>
+                        <button class="btn btn-default m-2" ><i class="fas fa-trash-alt"></i></button>
+                        <button class="btn btn-warning m-2" ><i class="fas fa-star"></i></button>
+                    </div>
+
+                </div>
+
             {% endfor %}
-        </ul>
-    </div>
+        </div>
+
+
+
+
 
 
 {% endblock %}
