--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -50,7 +50,7 @@
     <div class="navbar-collapse collapse order-3 dual-collapse2 justify-content-end">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'music:album-add' %}">
                     <span><i class="fas fa-plus"></i> Add Album</span>
                 </a>
             </li>
