--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -3,11 +3,11 @@
 
 {% block body %}
 
-    <div class="container mt-5">
+    <div class=" m-5">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-5 col-lg-4">
                 <div class="card text-center">
-                    <img src="{{ album.album_logo }}" class="card-img-top"/>
+                    <img src="{{ album.album_logo }}" class="card-img-top" />
                     <div class="card-block px-3">
                         <div class="card-text ">
                             <h1 class="card-title ">{{ album.album_title }}</h1>
@@ -18,7 +18,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-lg-8">
                 <table class="table table-striped table-sm">
                      <thead class="thead-dark">
                         <tr>
