--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -7,7 +7,7 @@
         <div class="container mt-3 ">
             {% for album in all_albums %}
                 <div class="card mx-2 " style="float: left;">
-                    <img src="{{ album.album_logo }}" />
+                    <img src="{{ album.album_logo }}"width="300" height="300" />
                     <div class="card-block px-2">
                         <h1> {{ album.album_title }} </h1>
                         <h2>{{ album.artist }}</h2>
