--- a/music/templates/music/album_form.html
+++ b/music/templates/music/album_form.html
@@ -10,7 +10,7 @@
         <div class="col-sm-12 col-md-7">
             <div class="panel panel-group bg-light mt-5 p-3">
                 <div class="panel-body">
-
+                    <h3>Add a New Album</h3>
                     <form class="form" action="" method="post" ectype="multipart/form-data">
                         {% csrf_token %}
                         {% include 'music/form-template.html' %}
