--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -12,6 +12,7 @@
                         <div class="card-text ">
                             <h1 class="card-title ">{{ album.album_title }}</h1>
                             <h3 class="">{{ album.artist }}</h3>
+                            <h5>{{ album.genre }}</h5>
                         </div>
                         <button class="btn btn-default m-2" ><i class="fas fa-trash-alt"></i></button>
                         <button class="btn btn-warning m-2" ><i class="fas fa-star"></i></button>
@@ -19,6 +20,10 @@
                 </div>
             </div>
             <div class="col-md-7 col-lg-8">
+                <div class="navi m-3">
+                    <button class="btn btn-info mr-3">ALL</button>
+                    <label><a href="" >Add new Song</a></label>
+                </div>
                 <table class="table table-striped table-sm">
                      <thead class="thead-dark">
                         <tr>
