--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -11,6 +11,7 @@
                     <div class="card-block px-2">
                         <h1> {{ album.album_title }} </h1>
                         <h2>{{ album.artist }}</h2>
+                        <h5>{{ album.genre }}</h5>
                         <button class="btn btn-info m-2" ><a href="{% url 'music:detail' album.id %}" style="text-decoration: none;color: white;">View details</a></button>
                         <button class="btn btn-default m-2" ><i class="fas fa-trash-alt"></i></button>
                         <button class="btn btn-warning m-2" ><i class="fas fa-star"></i></button>
