--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,30 +1,18 @@
 {% extends 'music/base.html' %}
 
 {% block body %}
-
-
-
-        <div class="container mt-3 ">
-            {% for album in all_albums %}
-                <div class="card mx-2 " style="float: left;">
-                    <img src="{{ album.album_logo }}"width="300" height="300" />
-                    <div class="card-block px-2">
-                        <h1> {{ album.album_title }} </h1>
-                        <h2>{{ album.artist }}</h2>
-                        <h5>{{ album.genre }}</h5>
-                        <button class="btn btn-info m-2" ><a href="{% url 'music:detail' album.id %}" style="text-decoration: none;color: white;">View details</a></button>
-                        <button class="btn btn-default m-2" ><i class="fas fa-trash-alt"></i></button>
-                        <button class="btn btn-warning m-2" ><i class="fas fa-star"></i></button>
-                    </div>
-
+    <div class="container mt-3 ">
+        {% for album in all_albums %}
+            <div class="card mx-2 " style="float: left;">
+                <img src="{{ album.album_logo }}"width="300" height="300" />
+                <div class="card-block px-2">
+                    <h1> {{ album.album_title }} </h1>
+                    <h2>{{ album.artist }}</h2>
+                    <h5>{{ album.genre }}</h5>
+                    <button class="btn btn-info m-2" ><a href="{% url 'music:detail' album.id %}" style="text-decoration: none;color: white;">View details</a></button>
+                    {% include 'music/delete-favourite-buttons.html' %}
                 </div>
-
-            {% endfor %}
-        </div>
-
-
-
-
-
-
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
