--- a/music/templates/music/delete-favourite-edit-buttons.html
+++ b/music/templates/music/delete-favourite-edit-buttons.html
@@ -3,4 +3,9 @@
     <input type="hidden" name="album_id" value="{{ album.id }}"/>
     <button class="btn btn-danger m-2" ><i class="fas fa-trash-alt"></i></button>
 </form>
+<form action="{% url 'music:album-update' album.id %}" method="get" style="display: inline;">
+    {% csrf_token %}
+    <input type="hidden" name="album_id" value="{{ album.id }}"/>
+    <button class="btn btn-success m-1" >Edit</button>
+</form>
 <button class="btn btn-warning m-2" ><i class="fas fa-star"></i></button>
