--- a/music/templates/music/album_form.html
+++ b/music/templates/music/album_form.html
@@ -11,12 +11,12 @@
             <div class="panel panel-group bg-light mt-5 p-3">
                 <div class="panel-body">
                     <h3>Add a New Album</h3>
-                    <form class="form" action="" method="post" ectype="multipart/form-data">
+                    <form class="form" action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% include 'music/form-template.html' %}
                         <div class="form-group">
                              <div class="col-sm-offset-2 col-sm-10">
-                                 <button type="submit" class="btn btn-success">Submit</button>
+                                 <button type="submit" class="btn btn-success">Zapisz</button>
                              </div>
 
                         </div>
