--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-5 col-lg-4">
                 <div class="card text-center">
-                    <img src="{{ album.album_logo }}" class="card-img-top" />
+                    <img src="{{ album.album_logo.url }}" class="card-img-top" />
                     <div class="card-block px-3">
                         <div class="card-text ">
                             <h1 class="card-title ">{{ album.album_title }}</h1>
